--- a/08—404页面的动画效果.html
+++ b/08—404页面的动画效果.html
@@ -11,68 +11,54 @@
 			  box-sizing: border-box;
 			  font-family: 'Poppins', sans-serif;
 			}
-			body
-			{
-			  display: flex;
-			  justify-content: center;
-			  align-items: center;
-			  min-height: 100vh;
-			  background: linear-gradient(135deg, #03A9F4,#03A9F4 50%,#333 50%,#333);
-			  background-attachment: fixed;
+			body {
+				min-height: 100vh;
+				background: linear-gradient(135deg, #03A9F4,#03A9F4 50%,#333 50%,#333);
+				display: flex;
+				align-items: center;
+				justify-content: center;
 			}
-			.box
-			{
-			  position: relative;
+			h2{
+				font-size: 15rem;
+				color: #fff;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				text-shadow: -25px 25px 40px rgb(0 0 0 / 50%), -10px 10px 0px rgb(255 255 255 / 50%), -20px 20px 0px rgb(255 255 255 / 20%), -30px 30px 0px rgb(255 255 255 / 5%);
 			}
-			.box h2
-			{
-			  display: flex;
-			  justify-content: center;
-			  align-items: center;
-			  color: #f3f3f3;
-			  font-size: 15em;
-			  text-shadow: -25px 25px 40px rgba(0,0,0,0.5),
-			        -10px 10px 0px rgba(255,255,255,0.5),
-			        -20px 20px 0px rgba(255,255,255,0.2),
-			        -30px 30px 0px rgba(255,255,255,0.05);
+			.circle{
+				width: 200px;
+				height: 200px;
+				display: inline-block;
+				position: relative;
+				border-radius: 50%;
+				box-shadow: -25px 25px 40px rgb(0 0 0 / 50%);
+				background: linear-gradient(to bottom, #fff,#777);
+				margin: 0 25px;
 			}
-			.circle
-			{
-			  position: relative;
-			  display: inline-block;
-			  width: 200px;
-			  height: 200px;
-			  background: linear-gradient(to bottom, #fff,#777);
-			  border-radius: 50%;
-			  box-shadow: -25px 25px 40px rgba(0,0,0,0.5);
-			  margin: 0 15px;
+			.circle::before{
+				content: ' ';
+				position: absolute;
+				width: 180px;
+				height: 180px;
+				right: 0;
+				top: 50%;
+				background: linear-gradient(to top, #fff,#777);
+				border-radius: 50%;
+				transform: translateY(-50%);
 			}
-			.circle:before
-			{
-			  content: '';
-			  position: absolute;
-			  width: 180px;
-			  height: 180px;
-			  right: 0;
-			  top: 50%;
-			  background: linear-gradient(to top, #fff,#777);
-			  border-radius: 50%;
-			  transform: translateY(-50%);
-			}
-			.circle:after
-			{
-			  content: '';
-			  position: absolute;
-			  width: 100px;
-			  height: 100px;
-			  right: 0;
-			  top: 50%;
-			  left: 50%;
-			  background: linear-gradient(315deg, #03A9F4,#03A9F4 50%,#333 50%,#333);
-			  border-radius: 50%;
-			  transform: translate(-50%,-50%);
-			  box-shadow: inset 0px 0px 30px rgba(0,0,0,1);
-			  animation: animate 5s steps(4) infinite;
+			.circle::after{
+				content: ' ';
+				width: 100px;
+				height: 100px;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				border-radius: 50%;
+				background: linear-gradient(315deg, #03A9F4,#03A9F4 50%,#333 50%,#333);
+				box-shadow: inset 0 0px 30px rgba(0,0,0,1);
+				animation: animate 5s steps(4) infinite;
 			}
 			@keyframes animate
 			{
@@ -88,8 +74,12 @@
 		</style>
 	</head>
 	<body>
-		<div class="box">
-			<h2>4<span class="circle"></span>4</h2>
+		<div>
+			<h2>
+				4
+				<span class="circle"></span>
+				4
+			</h2>
 		</div>
 	</body>
 </html>
